fixed overflow

--- a/src/App.css
+++ b/src/App.css
@@ -26,7 +26,13 @@
 .App-link {
   color: #61dafb;
 }
+html,body
+{
+    width: 100%;
+    margin: 0px;
+    padding: 0px;
 
+}
 @keyframes App-logo-spin {
   from {
     transform: rotate(0deg);
